--- a/site_shine7/index.html
+++ b/site_shine7/index.html
@@ -9,9 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="feminino.html">
   <link rel="stylesheet" href="masculino.html">
-  <link rel="stylesheet" href="menino.html">
-
-
+  
   <title> Loja Shine Modas</title>
   <link rel="stylesheet" href="icofont/icofont/icofont.min.css">
 
@@ -27,13 +25,14 @@
 
     <nav id="home">
       <div class="topo">
-        <div class="logo"><a href="sem_alert.html"><img src="img/shine.png"></a> </div>
-        <input type="text" name="procurar" id="pesquisar" class="pesquisar" placeholder="O que está procurando? "><span>
-          <button style="cursor: pointer;" onclick="abrir()"><i class="icofont-search-2"></i></button> </span>
+        <div class="logo"><a href="sem_alert.html"><img
+              src="img/shine.png"></a> </div>
+        <input type="text" name="procurar" class="pesquisar" placeholder="O que está procurando? "><span>
+          <i class="icofont-search-2"></i></span>
         <div class="entrar"><a href="entrar.html">ENTRE</a></div>
         <div class="entrar"><a href="cadastro.html">CADASTRE-SE</a></div>
-        <a href="#"><i class="icofont-grocery"></i></a>
-        <a href="#"><i class="icofont-heart-alt"></i></a>
+        <a href=""><i class="icofont-grocery"></i></a>
+        <a href="produtos_favoritos.html"><i class="icofont-heart-alt"></i></a>
 
 
 
@@ -43,16 +42,11 @@
       <ul>
         <li> <i class="icofont-girl-alt"></i> <a href="feminino.html">
             FEMININO </li></a>
-        <li><i class="icofont-funky-man"><a href="masculino.html"></i>
-          MASCULINO </li></a>
-        <li><i class="icofont-student"><a href="menina.html"></i> MENINA
-        </li></a>
-        <li><i class="icofont-student-alt"><a href="menino.html"></i>
-          MENINO </li></a>
-        <li><i class="icofont-beach"><a href="praia.html"></i> MODA PRAIA
-        </li></a>
-        <li><i class="icofont-optic"><a href="acessorios.html"></i>
-          ACESSÓRIOS </li></a>
+        <li><i class="icofont-funky-man"><a href="masculino.html"></i> MASCULINO </li></a>
+        <li><i class="icofont-student"><a href="menina.html"></i> MENINA </li></a>
+        <li><i class="icofont-student-alt"><a href="menino.html"></i> MENINO </li></a>
+        <li><i class="icofont-beach"><a href="praia.html"></i> MODA PRAIA </li></a>
+        <li><i class="icofont-optic"><a href="acessorios.html"></i> ACESSÓRIOS </li></a>
       </ul>
 
 
@@ -144,49 +138,49 @@
 
   <div class="oferta">
     <div class="coluna">
-      <div class="produto"><img src="img/roupa.jpeg">
+      <div class="produto"><img src="img/roupa.png">
         <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
         <label class="desconto"> &nbsp;R$199,90</label>
       </div>
     </div>
     <div class="oferta">
       <div class="coluna">
-        <div class="produto"><img src="img/roupa.jpeg">
+        <div class="produto"><img src="img/roupa.png">
           <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
           <label class="desconto"> &nbsp;R$199,90</label>
         </div>
       </div>
       <div class="oferta">
         <div class="coluna">
-          <div class="produto"><img src="img/roupa.jpeg">
+          <div class="produto"><img src="img/roupa.png">
             <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
             <label class="desconto"> &nbsp;R$199,90</label>
           </div>
         </div>
         <div class="oferta">
           <div class="coluna">
-            <div class="produto"><img src="img/roupa.jpeg">
+            <div class="produto"><img src="img/roupa.png">
               <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
               <label class="desconto"> &nbsp;R$199,90</label>
             </div>
           </div>
           <div class="oferta">
             <div class="coluna">
-              <div class="produto"><img src="img/roupa.jpeg">
+              <div class="produto"><img src="img/roupa.png">
                 <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
                 <label class="desconto"> &nbsp;R$199,90</label>
               </div>
             </div>
             <div class="oferta">
               <div class="coluna">
-                <div class="produto"><img src="img/roupa.jpeg">
+                <div class="produto"><img src="img/roupa.png">
                   <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
                   <label class="desconto"> &nbsp;R$199,90</label>
                 </div>
               </div>
               <div class="oferta">
                 <div class="coluna">
-                  <div class="produto"><img src="img/roupa.jpeg">
+                  <div class="produto"><img src="img/roupa5.png">
                     <label class="preco"> Vestido Tubinho Verde&nbsp; R$109,99</label>
                     <label class="desconto"> &nbsp;R$199,90</label>
                   </div>
@@ -289,11 +283,6 @@
 
                           </footer>
                           <script src="script.js"></script>
-
-
-
-
 </body>
-
 
 </html>
