--- a/site_shine7/moda_praia.html
+++ b/site_shine7/moda_praia.html
@@ -53,6 +53,7 @@
                 <h4> CATEGORIAS </h4>
                 <ul>
 
+                    
                     <li> <a href="blusas.html"> Blusas </a></li>
                     <br>
                     <li> <a href="calcas.html"> Calças </a></li>
@@ -74,40 +75,41 @@
                 <br>
                 <h4> TAMANHOS </h4>
                 <div id="tamanho">
-                    <li> <a href="#"> P </a></li>
+                    <li> <a href="p.html"> P </a></li>
                     <br>
-                    <li> <a href="#"> M </a></li>
+                    <li> <a href="m.html"> M </a></li>
                     <br>
-                    <li> <a href="#"> G </a></li>
+                    <li> <a href="g.html"> G </a></li>
                     <br>
-                    <li> <a href="#"> GG </a></li>
+                    <li> <a href="gg.html"> GG </a></li>
                     <br>
-                    <li> <a href="#"> UN </a></li>
+                    <li> <a href="unico.html"> UN </a></li>
                     <br>
-                    <li> <a href="#"> 02 </a></li>
+                    <li> <a href="2anos.html"> 02 </a></li>
                     <br>
-                    <li> <a href="#"> 04 </a></li>
+                    <li> <a href="4anos.html"> 04 </a></li>
                     <br>
-                    <li> <a href="#"> 06 </a></li>
+                    <li> <a href="6anos.html"> 06 </a></li>
                     <br>
-                    <li> <a href="#"> 08 </a></li>
+                    <li> <a href="8anos.html"> 08 </a></li>
                     <br>
-                    <li> <a href="#"> 10 </a></li>
+                    <li> <a href="10anos.html"> 10 </a></li>
                     <br>
-                    <li> <a href="#"> 12 </a></li>
+                    <li> <a href="12anos.html"> 12 </a></li>
                     <br>
-                    <li> <a href="#"> 34 </a></li>
+                    <li> <a href="34.html"> 34 </a></li>
                     <br>
-                    <li> <a href="#"> 36 </a></li>
+                    <li> <a href="36.html"> 36 </a></li>
                     <br>
-                    <li> <a href="#"> 40 </a></li>
+                    <li> <a href="38.html"> 38 </a></li>
                     <br>
-                    <li> <a href="#"> 42 </a></li>
+                    <li> <a href="40.html"> 40 </a></li>
                     <br>
-                    <li> <a href="#"> 44 </a></li>
+                    <li> <a href="42.html"> 42 </a></li>
                     <br>
-                    <li> <a href="#"> 46 </a></li>
-
+                    <li> <a href="44.html"> 44 </a></li>
+                    <br>
+                    <li> <a href="46.html"> 46 </a></li>
                 </div>
                 <br>
 
