--- a/site_shine7/sem_alert.html
+++ b/site_shine7/sem_alert.html
@@ -19,14 +19,13 @@
 </head>
 
 <body>
- 
+
   <h5> Frete grátis a partir de R$150,00 </h5>
   <header>
 
     <nav id="home">
       <div class="topo">
-        <div class="logo"><a href="sem_alert.html"><img
-              src="img/shine.png"></a> </div>
+        <div class="logo"><a href="sem_alert.html"><img src="img/shine.png"></a> </div>
         <input type="text" name="procurar" class="pesquisar" placeholder="O que está procurando? "><span>
           <i class="icofont-search-2"></i></span>
         <div class="entrar"><a href="file:///C:/Users/CriaSite/Desktop/site_shine7/entrar.html">ENTRE</a></div>
