--- a/site_shine7/praia.html
+++ b/site_shine7/praia.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<link rel="stylesheet" href="feminino.css">
+<link rel="stylesheet" href="praia.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="feminino.css">
+    <link rel="stylesheet" href="praia.css">
     <title> Loja Shine Modas</title>
     <link rel="stylesheet" href="icofont/icofont/icofont.min.css">
 
@@ -23,8 +23,8 @@
                             src="img/shine.png"></a> </div>
                 <input type="text" name="procurar" class="pesquisar" placeholder="O que está procurando? "><span>
                     <i class="icofont-search-2"></i></span>
-                <h7> <a href="entrar.html">ENTRE</a></h7>
-                <h7><a href="cadastro.html">CADASTRE-SE</a> </h7>
+                <h7> <a href="#">ENTRE</a></h7>
+                <h7><a href="#">CADASTRE-SE</a> </h7>
                 <a href="#"><i class="icofont-grocery"></i></a>
                 <a href="#"><i class="icofont-heart-alt"></i></a>
             </div>
@@ -47,6 +47,7 @@
             <div class="lateral">
                 <ul>
                     <h4> CATEGORIAS </h4>
+                    
                     <li> <a href="blusas.html"> Blusas </a></li>
                     <br>
                     <li> <a href="calcas.html"> Calças </a></li>
@@ -66,40 +67,41 @@
                     <li> <a href="roupa_menina.html"> Roupas Para Meninas </a></li>
                     <br>
                     <h4> TAMANHOS </h4>
-                    <li> <a href="#"> 34 </a></li>
+                    <li> <a href="p.html"> P </a></li>
                     <br>
-                    <li> <a href="#"> 36 </a></li>
+                    <li> <a href="m.html"> M </a></li>
                     <br>
-                    <li> <a href="#"> 40 </a></li>
+                    <li> <a href="g.html"> G </a></li>
                     <br>
-                    <li> <a href="#"> 42 </a></li>
+                    <li> <a href="gg.html"> GG </a></li>
                     <br>
-                    <li> <a href="#"> 44 </a></li>
+                    <li> <a href="unico.html"> UN </a></li>
                     <br>
-                    <li> <a href="#"> 46 </a></li>
+                    <li> <a href="2anos.html"> 02 </a></li>
                     <br>
-                    <li> <a href="#"> P </a></li>
+                    <li> <a href="4anos.html"> 04 </a></li>
                     <br>
-                    <li> <a href="#"> M </a></li>
+                    <li> <a href="6anos.html"> 06 </a></li>
                     <br>
-                    <li> <a href="#"> G </a></li>
+                    <li> <a href="8anos.html"> 08 </a></li>
                     <br>
-                    <li> <a href="#"> GG </a></li>
+                    <li> <a href="10anos.html"> 10 </a></li>
                     <br>
-                    <li> <a href="#"> UN </a></li>
+                    <li> <a href="12anos.html"> 12 </a></li>
                     <br>
-                    <li> <a href="#"> 2 </a></li>
+                    <li> <a href="34.html"> 34 </a></li>
                     <br>
-                    <li> <a href="#"> 4 </a></li>
+                    <li> <a href="36.html"> 36 </a></li>
                     <br>
-                    <li> <a href="#"> 6 </a></li>
+                    <li> <a href="38.html"> 38 </a></li>
                     <br>
-                    <li> <a href="#"> 8 </a></li>
+                    <li> <a href="40.html"> 40 </a></li>
                     <br>
-                    <li> <a href="#"> 10 </a></li>
+                    <li> <a href="42.html"> 42 </a></li>
                     <br>
-                    <li> <a href="#"> 12 </a></li>
+                    <li> <a href="44.html"> 44 </a></li>
                     <br>
+                    <li> <a href="46.html"> 46 </a></li>
 
 
 
@@ -204,7 +206,7 @@
             <div id="numero">
                 <div class="pagina">
                     <ul>
-                        <li> <a href="praia.html"> 1 </a></li>
+                        <li> <a href="#"> 1 </a></li>
 
 
 
